[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
reqwest = "0.10.6"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
select = "0.5.0"
concurrent-queue = "1.2.2"
threadpool = "1.8.1"
crossbeam-channel = "0.5.2"
url = "2.2.2"
dashmap = "5.0.0"
